# cpp-template

./: .clang-format  CMakeLists.txt  configure.sh
benchmarks/: CMakeLists.txt  dummy_benchmark.cpp
examples/: CMakeLists.txt  dummy_example.cpp
nix/: flake.nix  shell.nix
src/: hello.cppm
tests/: CMakeLists.txt  dummy_test.cpp
